--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,37 @@
     <link rel="icon" type="image/svg+xml" href="/noir-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noir</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Noir</title>
+    <meta name="title" content="Noir" />
+    <meta
+      name="description"
+      content="This is a real time chat appllication developed by Shahibul Hasan"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://noir-eud9.onrender.com" />
+    <meta property="og:title" content="Noir" />
+    <meta
+      property="og:description"
+      content="This is a real time chat appllication developed by Shahibul Hasan"
+    />
+    <meta property="og:image" content="/metaImg.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://noir-eud9.onrender.com" />
+    <meta property="twitter:title" content="Noir" />
+    <meta
+      property="twitter:description"
+      content="This is a real time chat appllication developed by Shahibul Hasan"
+    />
+    <meta property="twitter:image" content="/metaImg.jpg" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
